# networktools

./: .gitignore  README.md  bump.config.ts  package.json
.github/workflows/: ci.yml  code-quality.yml  release.yml
app/: app.config.ts
app/assets/css/: main.css
app/components/Config/: DeviceCards.vue
app/components/Layout/: Tile.vue
app/components/template-batch/: CodeSnippet.vue  GenerationActions.vue  TeraTutorialDrawer.vue
app/composables/: pages.ts  usePublicIp.ts  useTemplateBatch.ts
app/modules/: tauri.ts
app/pages/: [...all].vue  index.vue  ip-location.vue  ipv4-subnet.vue  ipv4-summary.vue  ipv6-subnet.vue  nat-batch.vue  nat-parser.vue  text-diff.vue  vsr-batch.vue
app/pages/nat-batch/: index.vue  settings.vue
app/pages/template-batch/: index.vue
app/utils/: error.ts  templateHints.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: ip_location.rs  ipv4_subnet.rs  ipv4_summary.rs  ipv6_subnet.rs  isp_manager.rs  lib.rs  main.rs  nat_batch_generator.rs  nat_parser.rs  template_batch.rs  text_diff.rs  vsr_batch.rs
src-tauri/src/template_batch/: analysis.rs  config_export.rs  config_generation.rs  dto.rs  excel_preview.rs  excel_utils.rs  mod.rs  value_utils.rs  variable_template.rs
src-tauri/templates/: vsr_config.tera
types/: nat-batch.ts  template-batch.ts  vsr-batch.ts
