[package]
name = "networktools"
version = "1.5.1"
description = "Starter template for Nuxt 4 and Tauri 2"
authors = [ "NicolaSpadari" ]
license = "MIT"
repository = "https://github.com/NicolaSpadari/nuxtor"
edition = "2021"

[lib]
name = "networktools_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.4.1"
features = [ ]

[dependencies]
tauri-plugin-shell = "2.3.1"
tauri-plugin-notification = "2.3.1"
tauri-plugin-os = "2.3.1"
tauri-plugin-fs = "2.4.2"
tauri-plugin-store = "2.4.0"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-opener = "2.3.1"
serde_json = "1"
num-format = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
reqwest = { version = "0.11", features = [ "json" ] }
regex = "1.10"
calamine = "0.24"
serde = { version = "1", features = [ "derive" ] }
uuid = { version = "1.0", features = [ "v4" ] }
chrono = { version = "0.4", features = [ "serde" ] }
serde_yaml = "0.9"
dirs = "5"
tokio = { version = "1", features = [ "full" ] }
ipnet = "2.9"
strsim = "0.11"
zip = { version = "0.6", default-features = false, features = [ "deflate" ] }
tempfile = "3.12"
rust_xlsxwriter = { version = "0.64", default-features = false, features = [ "chrono" ] }
tera = { version = "1.19", default-features = false }

[dependencies.tauri]
version = "2.8.5"
features = [
  "tray-icon",
  "unstable"
]
